Fix dropdown active item outline clipped by adjacent items (#32073)
* Initial plan

* Fix selected item outline overlapping next item in dropdown menus

Replace position:relative + absolute positioning with flexbox layout
on .dropdown-item to prevent stacking context overlap of active outline.


* Fix invalid HTML - replace `div` with `span` inside dropdown item description container

* Do not suppress keyboard focus outlines in toolbar dropdown menus

* Add explicit keyboard focus ring for dropdown items

* Avoid overlapping link focus rings with inset box-shadow

---------

GitOrigin-RevId: ce4d1b01f04476fd154b6c05a52fc5632bf8b8dc

--- a/services/web/frontend/stylesheets/abstracts/mixins.scss
+++ b/services/web/frontend/stylesheets/abstracts/mixins.scss
@@ -117,7 +117,8 @@
 }
 
 @mixin box-shadow-button-input {
-  box-shadow: 0 0 0 2px var(--blue-30);
+  box-shadow: inset 0 0 0 2px var(--blue-30);
+  outline: 2px solid transparent;
 }
 
 @mixin animation($animation) {
