--- a/services/web/frontend/stylesheets/components/dropdown-menu.scss
+++ b/services/web/frontend/stylesheets/components/dropdown-menu.scss
@@ -110,11 +110,9 @@ $dropdown-item-min-height: 36px;
 
   --bs-dropdown-item-border-radius: var(--border-radius-base);
 
-  display: grid;
-  grid-auto-flow: column;
-  place-content: center start;
+  display: flex;
+  align-items: center;
   min-height: $dropdown-item-min-height; // a minimum height of 36px to be accessible for touch screens
-  position: relative;
   background-color: var(--dropdown-background);
 
   &:active {
@@ -129,6 +127,10 @@ $dropdown-item-min-height: 36px;
 
   &:focus {
     background: none;
+  }
+
+  &:focus-visible {
+    @include box-shadow-button-input;
   }
 
   &:hover:not(.active),
@@ -179,17 +181,16 @@ $dropdown-item-min-height: 36px;
 }
 
 .dropdown-item-description-container {
-  grid-auto-flow: row;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  flex: 1;
   min-height: 44px;
-  display: grid;
-  place-content: center start;
 }
 
 .dropdown-item-trailing-icon {
-  position: absolute;
-  right: 10px;
-  top: 50%;
-  transform: translateY(-50%);
+  margin-left: auto;
+  padding-left: var(--spacing-04);
 }
 
 .dropdown-item-leading-icon {
