--- a/services/web/frontend/stylesheets/pages/editor/toolbar.scss
+++ b/services/web/frontend/stylesheets/pages/editor/toolbar.scss
@@ -123,11 +123,6 @@
     }
   }
 
-  > a:focus,
-  button:focus {
-    outline: none;
-  }
-
   > a:not(.btn),
   > button,
   .toolbar-left > a:not(.btn),
